(Fix) my-activities text alignment on small screens

--- a/_sass/my-activities.sass
+++ b/_sass/my-activities.sass
@@ -46,4 +46,6 @@
         padding: .5rem 1.5rem
     &__entry
       margin: .4rem
-      padding: 2rem
+      padding-top: 2rem
+      padding-bottom: 2rem
+      text-align: center
